syntax = "proto3";

package common;

option optimize_for = SPEED;

message Status {
  enum Code {
    OK = 0;
  }
  Code code = 1;
  string message = 2;
}

message HostAddress {
  string host = 1;
  int32 port = 2;
}

// Encode which host machine an actor resides.
message ActorInfo {
  uint32 actor_id = 1;
  HostAddress host = 2;
}

enum WorkerType {
  FRONTEND = 0;
  COMPUTE_NODE = 1;
  RISE_CTL = 2;
  COMPACTOR = 3;
}

enum ParallelUnitType {
  SINGLE = 0;
  HASH = 1;
}

message ParallelUnit {
  uint32 id = 1;
  ParallelUnitType type = 2;
  uint32 worker_node_id = 3;
}

message WorkerNode {
  enum State {
    STARTING = 0;
    RUNNING = 1;
  }
  uint32 id = 1;
  WorkerType type = 2;
  HostAddress host = 3;
  State state = 4;
  // a mapping from logical key to parallel unit, with logical key as the index of array
  repeated ParallelUnit parallel_units = 5;
}

// A cluster can be either a set of OLAP compute nodes, or a set of streaming compute nodes.
message Cluster {
  uint32 id = 1;
  repeated common.WorkerNode nodes = 2;
  map<string, string> config = 3;
}

// Vnode mapping for stream fragments / relational state tables. Stores mapping from virtual node to parallel unit id.
message ParallelUnitMapping {
  uint32 table_id = 1;
  repeated uint64 original_indices = 2;
  repeated uint32 data = 3;
}
